Added mcts_persona changes and merged dev/mergeprojs changes to mcts-bundle